--- a/app/src/main/res/layout/activity_showcirclecode.xml
+++ b/app/src/main/res/layout/activity_showcirclecode.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:text="XXXXXX"
             android:textSize="30sp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"/>
