--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -11,9 +11,9 @@
         android:id="@+id/header_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Roshan"
+        android:text="Hi Roshan"
         android:textSize="20sp"
-        android:textStyle="italic|bold"
+        android:textStyle="bold"
         android:textColor="#ffffff"
         android:textAllCaps="false"/>
     <TextView
