--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#2979FF</color>
     <color name="colorPrimaryDark">#2979FF</color>
     <color name="colorAccent">#2979FF</color>
     <color name="skyblue">#2979FF</color>
     <color name="saddedwhite">#EBEBEB</color>
+    <color name="white">#ffffff</color>
+    <color name="LowOpasityBlack">#80000000</color>
 </resources>
