--- a/app/src/main/res/layout/cardrecyclerview.xml
+++ b/app/src/main/res/layout/cardrecyclerview.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:padding="14dp">
+        android:padding="14dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textview_name"
