--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/skyblue"
     tools:context=".login_screen">
 
+    <TextView
+        android:id="@+id/slide_login_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="serif"
+        android:text="@string/login"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="60dp"/>
     <RelativeLayout
+        android:layout_below="@id/slide_login_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/cardbackground"
         android:padding="16dp">
 
@@ -27,7 +40,7 @@
                 android:layout_height="50dp"
                 android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="10dp"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:textSize="20sp" />
 
@@ -39,7 +52,7 @@
                 android:drawableStart="@drawable/ic_lock_black_24dp"
                 android:drawableEnd="@drawable/ic_eye"
                 android:drawablePadding="10dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:textSize="20sp" />
 
@@ -49,7 +62,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="35dp"
                 android:background="@drawable/loginbtnbackground"
-                android:text="log in"
+                android:text="@string/login"
                 android:textColor="@color/skyblue"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -66,7 +79,7 @@
                 android:id="@+id/txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account? "
+                android:text="@string/dontaccount"
                 android:textAlignment="center"
                 android:textSize="16sp" />
 
@@ -75,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/txt"
-                android:text="Sign Up"
+                android:text="@string/sign_up"
                 android:textColor="@color/skyblue"
                 android:textSize="16sp" />
         </RelativeLayout>
