--- a/app/src/main/res/layout/activity_signup_screen.xml
+++ b/app/src/main/res/layout/activity_signup_screen.xml
@@ -7,11 +7,25 @@
     android:background="@color/skyblue"
     tools:context=".signup_screen">
 
+    <TextView
+        android:id="@+id/faded_signup_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="serif"
+        android:text="@string/sign_up"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="60dp"/>
     <RelativeLayout
+        android:layout_below="@id/faded_signup_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/cardbackground"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="60dp"
         android:padding="16dp">
 
         <LinearLayout
@@ -47,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="10dp"
                 android:inputType="textEmailAddress"
@@ -58,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:drawableStart="@drawable/ic_lock_black_24dp"
                 android:drawablePadding="10dp"
                 android:drawableEnd="@drawable/ic_eye"
@@ -70,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="35dp"
-                android:text="Sign up"
+                android:text="@string/sign_up"
                 android:textStyle="bold"
                 android:background="@drawable/loginbtnbackground"
                 android:textSize="20sp"
@@ -97,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/txt"
-                android:text="Log in"
+                android:text="@string/login"
                 android:textColor="@color/skyblue"
                 android:textSize="16sp" />
         </RelativeLayout>
