--- a/app/src/main/res/layout/invite_code_fragment.xml
+++ b/app/src/main/res/layout/invite_code_fragment.xml
@@ -42,7 +42,7 @@
                     android:id="@+id/code_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="XXXXXX"
+                    android:text="@string/hide_code"
                     android:textColor="@color/skyblue"
                     android:textSize="30sp"
                     android:textStyle="bold"
