--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".MainActivity"
-    android:padding="16dp">
+    android:background="@color/white">
 
-    <TextView
+    <ImageView
+        android:id="@+id/vector_image"
         android:layout_width="wrap_content"
+        android:layout_height="350dp"
+        android:src="@drawable/vectorfamily"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:padding="14dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="35dp"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/logo_image"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/distance"
+            android:layout_gravity="center_horizontal"/>
+
+        <TextView
+            android:id="@+id/apptitle_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/app_name"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:layout_marginTop="5dp"/>
+        <TextView
+            android:id="@+id/introduction_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/splashintro"
+            android:textAllCaps="false"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:layout_marginTop="20dp"/>
+    </LinearLayout>
 
 </RelativeLayout>
