--- a/app/src/main/res/layout/join_circle_fragment.xml
+++ b/app/src/main/res/layout/join_circle_fragment.xml
@@ -2,42 +2,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="14dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="14dp"
-        android:layout_centerInParent="true">
+        android:layout_height="match_parent"
+        android:background="@color/saddedwhite"
+        android:padding="14dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="enter invitation code"
-            android:textSize="20sp"
-            android:layout_gravity="center_horizontal"/>
-        <EditText
-            android:id="@+id/join_edittext"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:textSize="25sp"
-            android:textAlignment="center"
-            android:inputType="number"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"/>
-        <Button
-            android:id="@+id/join_button"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="join"
-            android:textAllCaps="false"
-            android:textSize="25sp"
-            android:layout_marginStart="100dp"
-            android:layout_marginEnd="100dp"
-            android:layout_marginTop="20dp"/>
-    </LinearLayout>
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="5dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="14dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/invitationcode"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:textAllCaps="false"
+                    android:layout_gravity="center_horizontal"/>
+                <EditText
+                    android:id="@+id/join_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textSize="25sp"
+                    android:textAlignment="center"
+                    android:inputType="number"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"/>
+                <Button
+                    android:id="@+id/join_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="@string/join"
+                    android:background="@drawable/share_button_background"
+                    android:textColor="@color/white"
+                    android:textAllCaps="false"
+                    android:textSize="25sp"
+                    android:layout_marginStart="100dp"
+                    android:layout_marginEnd="100dp"
+                    android:layout_marginTop="20dp"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </ScrollView>
 
 </RelativeLayout>
