--- a/app/src/main/res/layout/activity_circle_members_map.xml
+++ b/app/src/main/res/layout/activity_circle_members_map.xml
@@ -6,4 +6,4 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".circle_members_map" />
+    tools:context=".Activity.circle_members_map" />
